# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
password_manager/: .gitignore  pyproject.toml  tasks.py  test.db  users.db
password_manager/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
password_manager/src/: build.py  config.py  database_connection.py  index.py  init_database.py  password_generation.py  password_generation_testaus.py
password_manager/src/entities/: save_info.py  save_password_info.py  user.py
password_manager/src/repositories/: info_repo.py  user_repo.py
password_manager/src/service/: password_generator.py  service.py
password_manager/src/tests/: info_repo_test.py  password_gen_test.py  service_test.py  tests.py  user_repo_test.py
password_manager/src/ui/: add_passwords_view.py  create_user_view.py  login_view.py  password_gen_view.py  start_screen.py  ui.py
password_manager/ui/: start_screen.py
